// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field DocumentLibrary has a helptext 1`] = `
<div class="form-group" data-field-name="textField">
  <fieldset>
    <div class="liferay-ddm-form-field-document-library">
      <div class="input-group">
        <div class="input-group-item input-group-prepend"><input aria-label="file" class="field form-control" disabled="" id="textFieldinputFile" type="text" value=""></div>
        <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
      </div><input name="textField" type="hidden" value="">
    </div>
  </fieldset><span class="form-text">Type something</span>
</div>
`;

exports[`Field DocumentLibrary has a label 1`] = `
<div class="form-group" data-field-name="textField">
  <fieldset>
    <legend>
      <p class="ddm-label">label </p>
    </legend>
    <div class="liferay-ddm-form-field-document-library">
      <div class="input-group">
        <div class="input-group-item input-group-prepend"><input aria-label="file" class="field form-control" disabled="" id="textFieldinputFile" type="text" value=""></div>
        <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
      </div><input name="textField" type="hidden" value="">
    </div>
  </fieldset>
</div>
`;

exports[`Field DocumentLibrary has a placeholder 1`] = `
<div class="form-group" data-field-name="textField">
  <fieldset>
    <div class="liferay-ddm-form-field-document-library">
      <div class="input-group">
        <div class="input-group-item input-group-prepend"><input aria-label="file" class="field form-control" disabled="" id="textFieldinputFile" type="text" value=""></div>
        <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
      </div><input name="textField" type="hidden" placeholder="Placeholder" value="">
    </div>
  </fieldset>
</div>
`;

exports[`Field DocumentLibrary has a spritemap 1`] = `
<div class="form-group" data-field-name="textField">
  <fieldset>
    <div class="liferay-ddm-form-field-document-library">
      <div class="input-group">
        <div class="input-group-item input-group-prepend"><input aria-label="file" class="field form-control" disabled="" id="textFieldinputFile" type="text" value=""></div>
        <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
      </div><input name="textField" type="hidden" value="">
    </div>
  </fieldset>
</div>
`;

exports[`Field DocumentLibrary has a value 1`] = `
<div class="form-group" data-field-name="textField">
  <fieldset>
    <div class="liferay-ddm-form-field-document-library">
      <div class="input-group">
        <div class="input-group-item input-group-prepend"><input aria-label="file" class="field form-control" disabled="" id="textFieldinputFile" type="text" value=""></div>
        <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
      </div><input name="textField" type="hidden" value="{&quot;id&quot;:&quot;123&quot;}">
    </div>
  </fieldset>
</div>
`;

exports[`Field DocumentLibrary has an id 1`] = `
<div class="form-group" data-field-name="textField">
  <fieldset>
    <div class="liferay-ddm-form-field-document-library">
      <div class="input-group">
        <div class="input-group-item input-group-prepend"><input aria-label="file" class="field form-control" disabled="" id="textFieldinputFile" type="text" value=""></div>
        <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
      </div><input id="ID" name="textField" type="hidden" value="">
    </div>
  </fieldset>
</div>
`;

exports[`Field DocumentLibrary is not readOnly 1`] = `
<div class="form-group" data-field-name="textField">
  <fieldset>
    <div class="liferay-ddm-form-field-document-library">
      <div class="input-group">
        <div class="input-group-item input-group-prepend"><input aria-label="file" class="field form-control" disabled="" id="textFieldinputFile" type="text" value=""></div>
        <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
      </div><input name="textField" type="hidden" value="">
    </div>
  </fieldset>
</div>
`;

exports[`Field DocumentLibrary is not required 1`] = `
<div class="form-group" data-field-name="textField">
  <fieldset>
    <div class="liferay-ddm-form-field-document-library">
      <div class="input-group">
        <div class="input-group-item input-group-prepend"><input aria-label="file" class="field form-control" disabled="" id="textFieldinputFile" type="text" value=""></div>
        <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
      </div><input name="textField" type="hidden" value="">
    </div>
  </fieldset>
</div>
`;

exports[`Field DocumentLibrary renders Label if showLabel is true 1`] = `
<div class="form-group" data-field-name="textField">
  <fieldset>
    <legend>
      <p class="ddm-label">text </p>
    </legend>
    <div class="liferay-ddm-form-field-document-library">
      <div class="input-group">
        <div class="input-group-item input-group-prepend"><input aria-label="file" class="field form-control" disabled="" id="textFieldinputFile" type="text" value=""></div>
        <div class="input-group-append input-group-item input-group-item-shrink"><button class="btn btn-secondary select-button" type="button"><span class="lfr-btn-label">select</span></button></div>
      </div><input name="textField" type="hidden" value="">
    </div>
  </fieldset>
</div>
`;
